align numbers in table

--- a/master_thesis/experiments/final_flow/final_flow_running_time_per_k.tex
+++ b/master_thesis/experiments/final_flow/final_flow_running_time_per_k.tex
@@ -1,6 +1,6 @@
-\KaHyPar{MF} & $23.56$ & $39.84$ & $56.44$ & $68.69$ & $86.73$ & $108.35$ & $125.74$\\ 
-\KaHyPar{CA} & $12.68$ & $17.02$ & $23.7$ & $30.78$ & $41.38$ & $56.95$ & $76.05$\\ 
-\hMetis{R} & $27.87$ & $51.03$ & $73.94$ & $90.09$ & $107.94$ & $127.26$ & $147.72$\\ 
-\hMetis{K} & $25.47$ & $31.92$ & $42.06$ & $52.87$ & $73.3$ & $108.15$ & $151.63$\\ 
-\PaToH{Q} & $1.93$ & $3.58$ & $5.39$ & $6.95$ & $8.32$ & $9.97$ & $11.34$\\ 
-\PaToH{D} & $0.43$ & $0.76$ & $1.11$ & $1.4$ & $1.69$ & $2$ & $2.27$\\ 
+\KaHyPar{MF} & 23.56 & 39.84 & 56.44 & 68.69 & 86.73 & 108.35 & 125.74\\ 
+\KaHyPar{CA} & 12.68 & 17.02 & 23.70 & 30.78 & 41.38 & 56.95 & 76.05\\ 
+\hMetis{R} & 27.87 & 51.03 & 73.94 & 90.09 & 107.94 & 127.26 & 147.72\\ 
+\hMetis{K} & 25.47 & 31.92 & 42.06 & 52.87 & 73.30 & 108.15 & 151.63\\ 
+\PaToH{Q} & 1.93 & 3.58 & 5.39 & 6.95 & 8.32 & 9.97 & 11.34\\ 
+\PaToH{D} & 0.43 & 0.76 & 1.11 & 1.40 & 1.69 & 2.00 & 2.27\\ 
