--- a/master_thesis/experiments/flow_alpha/flow_alpha_effectiveness_table.tex
+++ b/master_thesis/experiments/flow_alpha/flow_alpha_effectiveness_table.tex
@@ -1,7 +1,7 @@
-$1$ & $-6.08$ & $-5.57$ & $0.23$ \\ 
-$2$ & $-3.22$ & $-2.1$ & $0.72$ \\ 
-$4$ & $-1.9$ & $-0.26$ & $1.18$ \\ 
-$8$ & $-0.91$ & $0.92$ & $1.67$ \\ 
-$16$ & $-0.29$ & $1.65$ & $2.15$ \\ 
+$1$ & -6.08 & -5.57 & 0.23 \\ 
+$2$ & -3.22 & -2.10 & 0.72 \\ 
+$4$ & -1.90 & -0.26 & 1.18 \\ 
+$8$ & -0.91 & 0.92 & 1.67 \\ 
+$16$ & -0.29 & 1.65 & 2.15 \\ 
 \cmidrule{1-4}% 
-Ref. & \FlowVariant{-}{-}{+} & $6376.03$ &  \\ 
+Ref. &  \multicolumn{1}{|c|}{\FlowVariant{-}{-}{+}} & 6376.03 &  \\ 
