--- a/master_thesis/experiments/flow_alpha/flow_alpha_table.tex
+++ b/master_thesis/experiments/flow_alpha/flow_alpha_table.tex
@@ -1,7 +1,7 @@
-$1$ & $-6.1$ & $13.51$ & $-5.62$ & $14.22$ & $0.23$ & $15.19$ & $0.53$ & $55.75$ \\ 
-$2$ & $-3.2$ & $16.89$ & $-2.08$ & $18.23$ & $0.74$ & $17.97$ & $1.09$ & $87.93$ \\ 
-$4$ & $-1.82$ & $22.23$ & $-0.2$ & $24.29$ & $1.21$ & $22.5$ & $1.61$ & $144.42$ \\ 
-$8$ & $-0.85$ & $31.49$ & $0.98$ & $34.43$ & $1.71$ & $30.58$ & $2.16$ & $257.41$ \\ 
-$16$ & $-0.2$ & $48.66$ & $1.75$ & $53.23$ & $2.21$ & $45.04$ & $2.69$ & $498.29$ \\ 
+$1$ & -6.10 & 13.51 & -5.62 & 14.22 & 0.23 & 15.19 & 0.53 & 55.75 \\ 
+$2$ & -3.20 & 16.89 & -2.08 & 18.23 & 0.74 & 17.97 & 1.09 & 87.93 \\ 
+$4$ & -1.82 & 22.23 & -0.20 & 24.29 & 1.21 & 22.50 & 1.61 & 144.42 \\ 
+$8$ & -0.85 & 31.49 & 0.98 & 34.43 & 1.71 & 30.58 & 2.16 & 257.41 \\ 
+$16$ & -0.20 & 48.66 & 1.75 & 53.23 & 2.21 & 45.04 & 2.69 & 498.29 \\ 
 \cmidrule{1-9}% 
-Ref. & \multicolumn{2}{c||}{\FlowVariant{-}{-}{+}} & $6373.88$ & $13.73$ & \multicolumn{2}{c||}{} & \multicolumn{2}{c|}{} \\ 
+Ref. & \multicolumn{2}{c||}{\FlowVariant{-}{-}{+}} & 6373.88 & 13.73 & \multicolumn{2}{c||}{} & \multicolumn{2}{c|}{} \\ 
