--- a/master_thesis/experiments/flow_network/flow_network_max_flow_summary_table.tex
+++ b/master_thesis/experiments/flow_network/flow_network_max_flow_summary_table.tex
@@ -1,5 +1,5 @@
-$500$ & $0.81$ & $+1.79$ & $+24.56$ & $\mathbf{-7.36}$ \\ 
-$1000$ & $\mathbf{1.91}$ & $+12.92$ & $+26.88$ & $+13.9$ \\ 
-$5000$ & $\mathbf{13.52}$ & $+38.11$ & $+63.68$ & $+108.43$ \\ 
-$10000$ & $\mathbf{28.4}$ & $+53.52$ & $+92.56$ & $+182.79$ \\ 
-$25000$ & $\mathbf{64.18}$ & $+50.19$ & $+95.25$ & $+157.03$ \\ 
+$500$ & 0.81 & +1.79 & +24.56 & \bfseries{-7.36} \\ 
+$1000$ & \bfseries{1.91} & +12.92 & +26.88 & +13.90 \\ 
+$5000$ & \bfseries{13.52} & +38.11 & +63.68 & +108.43 \\ 
+$10000$ & \bfseries{28.40} & +53.52 & +92.56 & +182.79 \\ 
+$25000$ & \bfseries{64.18} & +50.19 & +95.25 & +157.03 \\ 
