--- a/master_thesis/experiments/flow_network/flow_network_max_flow_table.tex
+++ b/master_thesis/experiments/flow_network/flow_network_max_flow_table.tex
@@ -1,41 +1,41 @@
-\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $0.81$ & $+1.79$ & $+24.56$ & $\mathbf{-7.36}$ \\ 
- & $1000$ & $\mathbf{1.91}$ & $+12.92$ & $+26.88$ & $+13.9$ \\ 
- & $5000$ & $\mathbf{13.52}$ & $+38.11$ & $+63.68$ & $+108.43$ \\ 
- & $10000$ & $\mathbf{28.4}$ & $+53.52$ & $+92.56$ & $+182.79$ \\ 
- & $25000$ & $\mathbf{64.18}$ & $+50.19$ & $+95.25$ & $+157.03$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & 0.81 & +1.79 & +24.56 & \bfseries{-7.36} \\ 
+ & $1000$ & \bfseries{1.91} & +12.92 & +26.88 & +13.90 \\ 
+ & $5000$ & \bfseries{13.52} & +38.11 & +63.68 & +108.43 \\ 
+ & $10000$ & \bfseries{28.40} & +53.52 & +92.56 & +182.79 \\ 
+ & $25000$ & \bfseries{64.18} & +50.19 & +95.25 & +157.03 \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $0.29$ & $-10.46$ & $+11.79$ & $\mathbf{-34.02}$ \\ 
- & $1000$ & $0.71$ & $-9.51$ & $+18.18$ & $\mathbf{-35.86}$ \\ 
- & $5000$ & $5.16$ & $-5.94$ & $+12.21$ & $\mathbf{-17.03}$ \\ 
- & $10000$ & $10.23$ & $\mathbf{-1.3}$ & $+33.46$ & $+32.26$ \\ 
- & $25000$ & $\mathbf{26.05}$ & $+2.14$ & $+112.29$ & $+67.77$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & 0.29 & -10.46 & +11.79 & \bfseries{-34.02} \\ 
+ & $1000$ & 0.71 & -9.51 & +18.18 & \bfseries{-35.86} \\ 
+ & $5000$ & 5.16 & -5.94 & +12.21 & \bfseries{-17.03} \\ 
+ & $10000$ & 10.23 & \bfseries{-1.30} & +33.46 & +32.26 \\ 
+ & $25000$ & \bfseries{26.05} & +2.14 & +112.29 & +67.77 \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $0.42$ & $-11.77$ & $+23.1$ & $\mathbf{-13.55}$ \\ 
- & $1000$ & $0.98$ & $-11.76$ & $+14.61$ & $\mathbf{-12.01}$ \\ 
- & $5000$ & $7.33$ & $\mathbf{-1.06}$ & $+65.21$ & $+41.04$ \\ 
- & $10000$ & $\mathbf{15.19}$ & $+5.27$ & $+209.29$ & $+164.02$ \\ 
- & $25000$ & $\mathbf{41.5}$ & $+15.04$ & $+782.45$ & $+525.31$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & 0.42 & -11.77 & +23.10 & \bfseries{-13.55} \\ 
+ & $1000$ & 0.98 & -11.76 & +14.61 & \bfseries{-12.01} \\ 
+ & $5000$ & 7.33 & \bfseries{-1.06} & +65.21 & +41.04 \\ 
+ & $10000$ & \bfseries{15.19} & +5.27 & +209.29 & +164.02 \\ 
+ & $25000$ & \bfseries{41.50} & +15.04 & +782.45 & +525.31 \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $0.24$ & $-12.17$ & $+1.24$ & $\mathbf{-42.11}$ \\ 
- & $1000$ & $0.51$ & $-11.4$ & $+3.32$ & $\mathbf{-43.34}$ \\ 
- & $5000$ & $3.41$ & $-7.46$ & $+7.3$ & $\mathbf{-43.5}$ \\ 
- & $10000$ & $6.65$ & $-2.56$ & $+21.99$ & $\mathbf{-37.53}$ \\ 
- & $25000$ & $15.63$ & $+3.86$ & $+65.81$ & $\mathbf{-17.12}$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & 0.24 & -12.17 & +1.24 & \bfseries{-42.11} \\ 
+ & $1000$ & 0.51 & -11.40 & +3.32 & \bfseries{-43.34} \\ 
+ & $5000$ & 3.41 & -7.46 & +7.30 & \bfseries{-43.50} \\ 
+ & $10000$ & 6.65 & -2.56 & +21.99 & \bfseries{-37.53} \\ 
+ & $25000$ & 15.63 & +3.86 & +65.81 & \bfseries{-17.12} \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $\mathbf{1.45}$ & $+24.48$ & $+58.97$ & $+143.23$ \\ 
- & $1000$ & $\mathbf{3.51}$ & $+22.79$ & $+66.63$ & $+200.62$ \\ 
- & $5000$ & $\mathbf{26.34}$ & $+23.07$ & $+122.09$ & $+589.46$ \\ 
- & $10000$ & $\mathbf{48.87}$ & $+14.37$ & $+110.18$ & $+484.42$ \\ 
- & $25000$ & $\mathbf{102.32}$ & $+17.38$ & $+237.9$ & $+852.3$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & \bfseries{1.45} & +24.48 & +58.97 & +143.23 \\ 
+ & $1000$ & \bfseries{3.51} & +22.79 & +66.63 & +200.62 \\ 
+ & $5000$ & \bfseries{26.34} & +23.07 & +122.09 & +589.46 \\ 
+ & $10000$ & \bfseries{48.87} & +14.37 & +110.18 & +484.42 \\ 
+ & $25000$ & \bfseries{102.32} & +17.38 & +237.90 & +852.30 \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $\mathbf{0.66}$ & $+0.55$ & $+61.36$ & $+38.8$ \\ 
- & $1000$ & $\mathbf{1.63}$ & $+8.06$ & $+51.86$ & $+84.71$ \\ 
- & $5000$ & $\mathbf{11.55}$ & $+13.41$ & $+94.09$ & $+227.94$ \\ 
- & $10000$ & $\mathbf{25.28}$ & $+14.81$ & $+130.87$ & $+375.89$ \\ 
- & $25000$ & $\mathbf{55.67}$ & $+7.27$ & $+125.34$ & $+367.7$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & \bfseries{0.66} & +0.55 & +61.36 & +38.80 \\ 
+ & $1000$ & \bfseries{1.63} & +8.06 & +51.86 & +84.71 \\ 
+ & $5000$ & \bfseries{11.55} & +13.41 & +94.09 & +227.94 \\ 
+ & $10000$ & \bfseries{25.28} & +14.81 & +130.87 & +375.89 \\ 
+ & $25000$ & \bfseries{55.67} & +7.27 & +125.34 & +367.70 \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $1.6$ & $+3.5$ & $+8.07$ & $\mathbf{-39.46}$ \\ 
- & $1000$ & $3.79$ & $+34.29$ & $+14.28$ & $\mathbf{-14.95}$ \\ 
- & $5000$ & $\mathbf{26.3}$ & $+121.86$ & $+65.34$ & $+105.19$ \\ 
- & $10000$ & $\mathbf{60.57}$ & $+196.95$ & $+103.28$ & $+256.18$ \\ 
- & $25000$ & $\mathbf{140.35}$ & $+169.78$ & $+14.7$ & $+62.44$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & 1.60 & +3.50 & +8.07 & \bfseries{-39.46} \\ 
+ & $1000$ & 3.79 & +34.29 & +14.28 & \bfseries{-14.95} \\ 
+ & $5000$ & \bfseries{26.30} & +121.86 & +65.34 & +105.19 \\ 
+ & $10000$ & \bfseries{60.57} & +196.95 & +103.28 & +256.18 \\ 
+ & $25000$ & \bfseries{140.35} & +169.78 & +14.70 & +62.44 \\ 
