--- a/master_thesis/experiments/speed_up_heuristics/heuristic_table.tex
+++ b/master_thesis/experiments/speed_up_heuristics/heuristic_table.tex
@@ -1,5 +1,5 @@
-\KaHyPar{CA} & $7077.2$ & $6820.17$ & - & $29.26$ \\ 
-\KaHyPar{MF} & $-2.48$ & $-2.13$ & $51.76$ & $81.02$ \\ 
-\KaHyParConfig{MF}{R1} & $-2.41$ & $-2.05$ & $41.21$ & $70.47$ \\ 
-\KaHyParConfig{MF}{R1,R2} & $-2.4$ & $-2.04$ & $35.56$ & $64.82$ \\ 
-\KaHyParConfig{MF}{R1,R2,R3} & $-2.41$ & $-2.05$ & $26.64$ & $55.9$ \\ 
+\KaHyPar{CA} & 7077.20 & 6820.17 & \multicolumn{1}{c}{-} & 29.26 \\ 
+\KaHyPar{MF} & -2.48 & -2.13 & 51.76 & 81.02 \\ 
+\KaHyParConfig{MF}{R1} & -2.41 & -2.05 & 41.21 & 70.47 \\ 
+\KaHyParConfig{MF}{R1,R2} & -2.40 & -2.04 & 35.56 & 64.82 \\ 
+\KaHyParConfig{MF}{R1,R2,R3} & -2.41 & -2.05 & 26.64 & 55.90 \\ 
